# Entropic-Encounters

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
logic/RAG_files/: EntropicEncounters_Chunked.txt  chunk_embeddings_mac.pkl
logic/llm/: conversational_llm.py  main.py  misc.json  rag.py
templates/: base.html  home.html
templates/cotton/: img_card.html  img_vcard.html  q_img_card.html  txt_card.html
templates/views/: briefing_celestial.html  briefing_explorer.html  gameplay.html  main_mission.html  planet_description.html  planet_selection.html  questions_list.html  questions_selection.html  reflection.html  role_selection.html  society_description.html  society_selection.html
ui/: info.py  urls.py  views.py
ui/static_src/: package-lock.json  package.json  tailwind.config.js
